# tao

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOKKU_SCALE  Dockerfile  Dockerfile.api  Dockerfile.web  Procfile  README.md  deploy.sh  ecosystem.config.js  entrypoint.sh  justfile  main.py  pyproject.toml  start.sh  stop.sh  test.py
.claude/: settings.local.json
.githooks/: pre-commit
api/: cache.py  deps.py  main.py  middleware.py  models.py
api/routers/: balances.py  dashboard.py  metagraph.py  subnets.py
docs/: GUIDE.md
scripts/: backfill.py  init_db.py  migrate.py  my_subnet.py
src/tao/: config.py  main.py  scheduler.py
src/tao/collectors/: base.py  coldkey_balance.py  metagraph.py  subnet_overview.py  taostats.py
src/tao/db/: connection.py  schema.sql
src/tao/db/queries/: runs.py  (+4 more)
tests/: test_balance.py  test_metagraph.py  test_subnet_overview.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/app/balances/: page.tsx
web/app/dashboard/: page.tsx
web/app/docs/: content.ts  page.tsx
web/app/my-subnets/: page.tsx
web/app/subnets/: page.tsx
web/components/tao/: CollectionRunsTable.tsx  CommandPalette.tsx  HeroSection.tsx  Markdown.tsx  MinerChart.tsx  MinerHistoryChart.tsx  MySubnetsManager.tsx  NeuronTable.tsx  Sidebar.tsx  StatsCards.tsx  SubnetHistoryChart.tsx  SubnetNotes.tsx  SubnetTable.tsx  SystemStatusCard.tsx  TabsWithUrl.tsx  ThemeToggle.tsx
web/components/ui/: dialog.tsx  input.tsx  textarea.tsx
web/hooks/: use-mobile.ts
web/lib/: api.ts  types.ts
(+2 files in other folders)
