[project]
name = "tao"
version = "0.1.0"
description = "Bittensor network monitor — data pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bittensor>=10.1.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tao"]
